// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDF Renderer Component snapshots first page, prev is disabled 1`] = `
<div
  className="pdf-renderer"
>
  <Document
    file="some_url.pdf"
    onLoadError={[MockFunction hooks.onDocumentLoadError]}
    onLoadSuccess={[MockFunction hooks.onDocumentLoadSuccess]}
  >
    <div
      className="page-wrapper"
      style={
        Object {
          "height": 200,
        }
      }
    >
      <Page
        onLoadSuccess={[MockFunction hooks.onLoadPageSuccess]}
        pageNumber={1}
      />
    </div>
  </Document>
  <ActionRow
    className="d-flex justify-content-center m-0"
  >
    <IconButton
      alt="previous pdf page"
      disabled={true}
      iconAs="Icon"
      onClick={[MockFunction hooks.onPrevPageButtonClick]}
      size="inline"
      src={[MockFunction icons.ChevronLeft]}
    />
    <Form.Group
      className="d-flex align-items-center m-0"
    >
      <Form.Label
        isInline={true}
      >
        Page 
      </Form.Label>
      <Form.Control
        max={10}
        min={0}
        onChange={[MockFunction hooks.onInputPageChange]}
        type="number"
        value={1}
      />
      <Form.Label
        isInline={true}
      >
         of 
        10
      </Form.Label>
    </Form.Group>
    <IconButton
      alt="next pdf page"
      disabled={false}
      iconAs="Icon"
      onClick={[MockFunction hooks.onNextPageButtonClick]}
      size="inline"
      src={[MockFunction icons.ChevronRight]}
    />
  </ActionRow>
</div>
`;

exports[`PDF Renderer Component snapshots on last page, next is disabled 1`] = `
<div
  className="pdf-renderer"
>
  <Document
    file="some_url.pdf"
    onLoadError={[MockFunction hooks.onDocumentLoadError]}
    onLoadSuccess={[MockFunction hooks.onDocumentLoadSuccess]}
  >
    <div
      className="page-wrapper"
      style={
        Object {
          "height": 200,
        }
      }
    >
      <Page
        onLoadSuccess={[MockFunction hooks.onLoadPageSuccess]}
        pageNumber={10}
      />
    </div>
  </Document>
  <ActionRow
    className="d-flex justify-content-center m-0"
  >
    <IconButton
      alt="previous pdf page"
      disabled={false}
      iconAs="Icon"
      onClick={[MockFunction hooks.onPrevPageButtonClick]}
      size="inline"
      src={[MockFunction icons.ChevronLeft]}
    />
    <Form.Group
      className="d-flex align-items-center m-0"
    >
      <Form.Label
        isInline={true}
      >
        Page 
      </Form.Label>
      <Form.Control
        max={10}
        min={0}
        onChange={[MockFunction hooks.onInputPageChange]}
        type="number"
        value={10}
      />
      <Form.Label
        isInline={true}
      >
         of 
        10
      </Form.Label>
    </Form.Group>
    <IconButton
      alt="next pdf page"
      disabled={true}
      iconAs="Icon"
      onClick={[MockFunction hooks.onNextPageButtonClick]}
      size="inline"
      src={[MockFunction icons.ChevronRight]}
    />
  </ActionRow>
</div>
`;
